@@ -1,3 +1,10 @@
+2010-07-06  Andrey Kiselev  <dron@ak4719.spb.edu>
+
+	* libtiff/tif_dirinfo.c: Don't use assertions in _TIFFFieldWithTag()
+	and _TIFFFieldWithName() if the tag is not found in the tag table.
+	This should be normal situation and returned NULL value should be
+	properly handled by the caller.
+
 2010-07-02  Andrey Kiselev  <dron@ak4719.spb.edu>
 
 	* libtiff/tif_getimage.c: Avoid wrong math du to the signed/unsigned
